tests/reference/asr-statement_func-5e8c970.stderr
semantic error: No implicit type found for variable 'x'
 --> tests/errors/statement_func.f90:4:5
  |
4 |     stmt_func(x) = x + 1
  |     ^^^^^^^^^^^^^^^^^^^^ 
